--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-lg-8">
           <h1>Welcome to <span>Seoul Food</span></h1>
-          <h2>Delivering great korean food for more than 23 years!</h2>
+          <h2>Experience the flowers of Seoul.</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
@@ -133,21 +133,21 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>"Experience the flowers of Seoul"</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Korean Seoul food is some of the healthiest on earth, with an emphasis on vegetables, meats cooked simply and without much oil, and a near obsession with the fermented vegetable kimchi, which can be something of an acquired taste for non-Koreans.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Our Korean dishes are low in fat and calories, making them a good choice for those looking to maintain a healthy weight.</li>
+              <li><i class="bi bi-check-circle"></i> We serve fresh, natural ingredients which can be healthy for consumers.</li>
+              <li><i class="bi bi-check-circle"></i> It could help improve your health, help you loose weight, prevent diseases and improve your general well being.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Aside from the fact that Korean food lends itself well to a non-obese population, it also offers many other health benefits. Said benefits to good health will not come as a surprise once the ingredients, condiments and materials used as well as the cooking tools, techniques and technologies applied are considered.
+
             </p>
+
+            <p>The most common ingredients we used in Korean cuisine are vegetables, which we all know to be full of the macronutrients and micronutrients essential in the maintenance of good health. From the side dish to the main dish and from fresh to fermented, vegetables like cabbages, bean sprouts and spinach are generously used. Add in the generous uses of garlic, ginger and other beneficial spices and Korean cuisine is very healthy.</p>
           </div>
         </div>
 
@@ -1025,19 +1025,19 @@
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Modi sit est</a>
+                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">Kimchi (김치)</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">Unde praesentium sed</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">Bibimbap (비빔밥)</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">Pariatur explicabo vel</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">Tteokbokki (떡볶이)</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Nostrum qui quasi</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Bulgogi (불고기)</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Iusto ut expedita aut</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Jjigae (찌개)</a>
               </li>
             </ul>
           </div>
@@ -1046,60 +1046,60 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Architecto ut aperiam autem id</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <h3>Kimchi (김치)</h3>
+                    <p class="fst-italic">Kimchi is a traditional Korean dish made from fermented vegetables, typically cabbage and radish, along with spices and seasonings such as chili pepper, garlic, and ginger. It has a sour and spicy flavor and is often served as a side dish or used as an ingredient in other dishes.</p>
+                    <p>Kimchi is known for its health benefits, as the fermentation process produces probiotics, which are good for digestion and gut health. It is also a good source of vitamins and minerals, including vitamin C, vitamin K, and potassium.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-1.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/Kimchi.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <h3>Bibimbap (비빔밥)</h3>
+                    <p class="fst-italic">Bibimbap is a Korean rice bowl dish that typically consists of a bed of rice topped with various seasoned vegetables, cooked meat, and a fried egg. The ingredients are often arranged in a visually appealing manner, and the dish is served with a spicy sauce called gochujang.</p>
+                    <p>Bibimbap is a popular and flavorful dish that has many health benefits, as it is packed with nutrients from the vegetables and protein from the meat and egg. It is also a great way to try a variety of Korean flavors in one dish.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/bibimbap.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <h3>Tteokbokki (떡볶이)</h3>
+                    <p class="fst-italic">Tteokbokki is a Korean street food made with cylindrical rice cakes that are cooked in a spicy chili sauce. It can also include additional ingredients such as fish cakes, boiled eggs, and vegetables. The dish has a chewy texture and a spicy and savory flavor.</p>
+                    <p>Tteokbokki is a popular Korean snack or meal that is loved for its unique texture and bold flavors. It is also an affordable and convenient option, as it can be found in many Korean street food stalls and restaurants.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-3.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/Tteokbokki.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Fuga dolores inventore laboriosam ut est accusamus laboriosam dolore</h3>
-                    <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
-                    <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
+                    <h3>Bulgogi (불고기)</h3>
+                    <p class="fst-italic">Bulgogi is a Korean dish made with thin slices of marinated beef, usually served with rice, vegetables, and often wrapped in lettuce leaves. The marinade typically consists of soy sauce, sugar, garlic, and other seasonings, giving it a sweet and savory flavor.</p>
+                    <p>Bulgogi is a popular and flavorful dish that has many health benefits, as it is a good source of protein, iron, and other essential nutrients. It is also versatile and can be served in a variety of ways, such as in a stir-fry, as a sandwich filling, or in a rice bowl.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-4.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/bulgogi.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
               <div class="tab-pane" id="tab-5">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <h3>Jjigae (찌개)</h3>
+                    <p class="fst-italic">Jjigae is a Korean stew-like dish that is typically made with a variety of ingredients, such as meat, seafood, vegetables, tofu, and noodles, all cooked in a savory broth. There are many different types of Jjigae, including kimchi jjigae, doenjang jjigae, and budae jjigae, among others.</p>
+                    <p>Jjigae is a popular dish in Korean cuisine and is often served as a main course or a side dish. It's known for its hearty and comforting qualities and is often enjoyed during the colder months.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.png" alt="" class="img-fluid">
+                    <img src="assets/img/menu/jjigae.jpg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
